--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#62727b</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorText">#FFFFFF</color>
+    <color name="black">#000</color>
 </resources>
